--- a/public/frontend/assets_theme/corporate/css/themes/blue.css
+++ b/public/frontend/assets_theme/corporate/css/themes/blue.css
@@ -1,14 +1,14 @@
 a {
-  color: #64aed9;
+    color: #26a5f0;
 }
 a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .pre-header a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .shop-currencies a.current {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .header-navigation ul > li.active > a,
 .header-navigation ul > li > a:hover,
@@ -16,48 +16,53 @@ a:hover {
 .header-navigation ul > li.open > a,
 .header-navigation ul > li.open > a:hover,
 .header-navigation ul > li.open > a:focus {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .header-navigation li.menu-search i:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .sidebar a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .sidebar .dropdown.open .dropdown-toggle:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
-.sidebar-menu .dropdown-menu li > a:hover, .sidebar-menu .dropdown-menu li > a:focus, .sidebar-menu li.active > a, .sidebar-menu li.active > a:hover {
-  color: #64aed9;
+.sidebar-menu .dropdown-menu li > a:hover,
+.sidebar-menu .dropdown-menu li > a:focus,
+.sidebar-menu li.active > a,
+.sidebar-menu li.active > a:hover {
+    color: #26a5f0;
 }
-.content-page a:hover, 
+.content-page a:hover,
 .sidebar2 a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
-.content-page .link, .content-page .link:hover, .content-page .link:active {
-  color: #64aed9;
+.content-page .link,
+.content-page .link:hover,
+.content-page .link:active {
+    color: #26a5f0;
 }
 .page-404 .number,
 .page-500 .number {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .content-form-page a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .quote-v1 a.btn-transparent:hover {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .recent-work h2 a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .recent-work .recent-work-item .fa:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .our-clients h2 a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .front-team h3 strong {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .ecommerce .header-navigation ul > li.active > a,
 .ecommerce .header-navigation ul > li > a:hover,
@@ -65,309 +70,317 @@ a:hover {
 .ecommerce .header-navigation ul > li.open > a,
 .ecommerce .header-navigation ul > li.open > a:hover,
 .ecommerce .header-navigation ul > li.open > a:focus {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .product-item h3 a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .checkout-page a:hover {
-  color: #64aed9;
+    color: #26a5f0;
 }
 
-
-.langs-block-others:after { 
-  border-bottom: 8px solid #64aed9;
+.langs-block-others:after {
+    border-bottom: 8px solid #26a5f0;
 }
-.header-navigation > ul > li.dropdown:hover > a:after { 
-  border-bottom: 8px solid #64aed9;
+.header-navigation > ul > li.dropdown:hover > a:after {
+    border-bottom: 8px solid #26a5f0;
 }
 .header-navigation .dropdown-menu > li > a:hover,
 .header-navigation .dropdown-menu > li.active > a,
-.header-navigation .header-navigation-content .header-navigation-col li > a:hover,
-.header-navigation .header-navigation-content .header-navigation-col li.active > a {
-  background: #64aed9;
-  color: #fff;
+.header-navigation
+    .header-navigation-content
+    .header-navigation-col
+    li
+    > a:hover,
+.header-navigation
+    .header-navigation-content
+    .header-navigation-col
+    li.active
+    > a {
+    background: #26a5f0;
+    color: #fff;
 }
 .header-navigation .dropdown-menu .header-navigation-content-ext li > a:hover,
 .header-navigation .dropdown-menu .header-navigation-content-ext li.active > a {
-  background: #fff;
-  color: #64aed9;
+    background: #fff;
+    color: #26a5f0;
 }
-.header-navigation .search-box:after { 
-  border-bottom: 8px solid #64aed9;
+.header-navigation .search-box:after {
+    border-bottom: 8px solid #26a5f0;
 }
 .header-navigation .search-box {
-  border-top: solid 2px #64aed9;
+    border-top: solid 2px #26a5f0;
 }
 .title-wrapper h1 span {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .breadcrumb > .active {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .form-info h2 em {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .nav-tabs {
-  border-color: #64aed9;
+    border-color: #26a5f0;
 }
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  background: #64aed9;
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+    background: #26a5f0;
 }
 .content-search h1 em {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .recent-work .recent-work-item:hover a.recent-work-description {
-  background: #64aed9;
+    background: #26a5f0;
 }
-.testimonials-v1 blockquote:after { 
-  background-color: #64aed9;
+.testimonials-v1 blockquote:after {
+    background-color: #26a5f0;
 }
 .testimonials-v1 span.testimonials-name {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .search-result-item h4 a {
-  color: #64aed9;
+    color: #26a5f0;
 }
-.top-cart-content:after { 
-  border-bottom: 8px solid #64aed9;
+.top-cart-content:after {
+    border-bottom: 8px solid #26a5f0;
 }
 .goods-data a,
 .checkout-page .checkout-description a {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .product-page .review a {
-  color: #64aed9;
+    color: #26a5f0;
 }
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-    background: #64aed9;
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+    background: #26a5f0;
     color: #fff;
 }
 .list-view-sorting a {
-  background: #fff;
-  color: #64aed9;
+    background: #fff;
+    color: #26a5f0;
 }
-
-
 
 ::-moz-selection {
-  color: #fff;
-  background: #64aed9;
+    color: #fff;
+    background: #26a5f0;
 }
 ::selection {
-  color: #fff;
-  background: #64aed9;
+    color: #fff;
+    background: #26a5f0;
 }
 .steps-block ::-moz-selection {
-  color: #64aed9;
-  background: #fff;
+    color: #26a5f0;
+    background: #fff;
 }
 .steps-block ::selection {
-  color: #64aed9;
-  background: #fff;
+    color: #26a5f0;
+    background: #fff;
 }
-
-
 
 .owl-buttons .owl-prev:hover {
-    background-color: #64aed9;
+    background-color: #26a5f0;
 }
 .owl-buttons .owl-next:hover {
-    background-color: #64aed9;
+    background-color: #26a5f0;
 }
 .steps-block-red {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .pre-footer .photo-stream img:hover {
-  border-color: #64aed9;
+    border-color: #26a5f0;
 }
 .pre-footer-light dl.f-twitter dd a {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .pre-footer-light address a {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .testimonials-v1 .left-btn:hover {
-    background-color: #64aed9;
+    background-color: #26a5f0;
 }
 .testimonials-v1 .right-btn:hover {
-    background-color: #64aed9;
+    background-color: #26a5f0;
 }
 .blog-tags li i,
 .blog-info li i {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .blog-posts .more,
 .blog-sidebar .more {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .recent-news h3 a {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .blog-photo-stream li img:hover {
-  border-color: #64aed9;
+    border-color: #26a5f0;
 }
 .blog-tags li a:hover {
-  color: #fff;
-  background: #64aed9;
+    color: #fff;
+    background: #26a5f0;
 }
-.blog-tags li a:hover:after { 
-  border-left-color: #64aed9;
+.blog-tags li a:hover:after {
+    border-left-color: #26a5f0;
 }
 .sidebar-categories li > a:hover,
 .sidebar-categories li.active > a,
 .sidebar-categories li.active:hover > a {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .blog-item blockquote {
-  border-color: #64aed9;
+    border-color: #26a5f0;
 }
 .blog-item h4.media-heading span a {
-    color: #64aed9;
+    color: #26a5f0;
 }
 .front-steps-wrapper .front-step1 {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .pricing-active {
-  border: 3px solid #64aed9;
-  box-shadow: 7px 7px rgba(100, 174, 217, 0.2);
+    border: 3px solid #26a5f0;
+    box-shadow: 7px 7px rgba(100, 174, 217, 0.2);
 }
 .pricing:hover {
-  border: 3px solid #64aed9;
+    border: 3px solid #26a5f0;
 }
 .pricing:hover h4 {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .pricing-head h3 {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .pricing-head-active h4 {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .pricing-content li i {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .top-cart-block .fa-shopping-cart {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .product-item .btn:hover {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .pi-price {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .product-item .add2cart:hover {
-  color: #fff !important;
-  background: #64aed9 !important;
-  border-color: #64aed9;
+    color: #fff !important;
+    background: #26a5f0 !important;
+    border-color: #26a5f0;
 }
-.goods-page-price strong, 
+.goods-page-price strong,
 .goods-page-total strong,
 .checkout-price strong,
 .checkout-total strong {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .shopping-total strong,
 .checkout-total-block strong {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .compare-item strong {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .sidebar-products .price {
-    color: #64aed9;
+    color: #26a5f0;
 }
 .price-availability-block .price strong {
-  color: #64aed9;
+    color: #26a5f0;
 }
 
 .require {
-  color: #64aed9;
+    color: #26a5f0;
 }
 .content-form-page .form-control:focus {
-  border: solid 1px #64aed9;
+    border: solid 1px #26a5f0;
 }
 .content-search input:focus {
-  border: solid 1px #64aed9;
+    border: solid 1px #26a5f0;
 }
 
 .btn-primary {
-  background: #64aed9;
+    background: #26a5f0;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active {
-  background: #64aed9;
+    background: #26a5f0;
 }
 
 .header-navigation .dropdown-menu > li:first-child {
-    border-top: 2px solid #64aed9;
+    border-top: 2px solid #26a5f0;
 }
 .front-steps-wrapper .front-step1:after {
-    border-left: 15px solid #83BEE0;
+    border-left: 15px solid #33a5e8;
 }
 
 .del-goods:hover,
 .add-goods:hover {
-  background-color: #83BEE0;
+    background-color: #33a5e8;
 }
 
 .sidebar a:hover > .fa-angle-down {
-  background-position: -22px 0;
+    background-position: -22px 0;
 }
 .sidebar .collapsed:hover > .fa-angle-down {
-  background-position: -22px -37px;
+    background-position: -22px -37px;
 }
 
 .top-cart-content {
-  border-top: solid 2px #83BEE0;
+    border-top: solid 2px #33a5e8;
 }
 
 .front-skills .progress-bar {
-  background: #83BEE0;
+    background: #33a5e8;
 }
 
 .service-box-v1:hover {
-  background: #83BEE0;
+    background: #33a5e8;
 }
 
 .header .mobi-toggler:hover {
-  background-color: #83BEE0;
-  border-color: #83BEE0;
+    background-color: #33a5e8;
+    border-color: #33a5e8;
 }
 
 @media (max-width: 1024px) {
-  .header .header-navigation li > a:hover,
-  .header .header-navigation li.active > a,
-  .header .header-navigation li.open > a:hover {
-    color: #83BEE0 !important;
-  }
+    .header .header-navigation li > a:hover,
+    .header .header-navigation li.active > a,
+    .header .header-navigation li.open > a:hover {
+        color: #33a5e8 !important;
+    }
 }
 
 .faq-tabbable {
-  border-left: solid 2px #83BEE0;
+    border-left: solid 2px #33a5e8;
 }
 .faq-tabbable li:hover a,
-.faq-tabbable li.active a{
-  background: #83BEE0;
+.faq-tabbable li.active a {
+    background: #33a5e8;
 }
 .faq-tabbable li.active:after {
-  border-left: 6px solid #83BEE0;
+    border-left: 6px solid #33a5e8;
 }
 
-.mix-filter li:hover, .mix-filter li.active {
-    background: #83BEE0;
+.mix-filter li:hover,
+.mix-filter li.active {
+    background: #33a5e8;
     color: #fff;
 }
 .mix-grid .mix .mix-details {
-  background: #83BEE0;
+    background: #33a5e8;
 }
-.mix-grid .mix a.mix-link, 
+.mix-grid .mix a.mix-link,
 .mix-grid .mix a.mix-preview {
-  background: #1ab8db;
+    background: #1ab8db;
 }
 .langs-block-others {
-  border-top: solid 2px #83BEE0;
+    border-top: solid 2px #33a5e8;
 }
 
 .brands .owl-buttons .owl-prev:hover {
@@ -378,5 +391,5 @@ a:hover {
 }
 .header-navigation ul > li.active > a/*,
 .ecommerce .header-navigation ul > li.active > a*/ {
-  border-bottom: 2px solid #83BEE0;
+    border-bottom: 2px solid #33a5e8;
 }
