--- a/public/frontend/assets_theme/corporate/css/style.css
+++ b/public/frontend/assets_theme/corporate/css/style.css
@@ -431,9 +431,9 @@ Header and header elements
 ***/
 .header {
     box-shadow: 0 1px 3px #ddd;
-    background: #fff;
+    background: #d3e8f5;
     border-radius: 0;
-    margin-bottom: 23px;
+    /* margin-bottom: 23px; */
     z-index: 999;
     position: relative;
 }
