--- a/public/frontend/css/camera.css
+++ b/public/frontend/css/camera.css
@@ -4,7 +4,8 @@
     object-fit: contain;
 }
 .sp_img_chi_tiet,
-.sp_img_dai_dien {
+.sp_img_dai_dien,
+.img_logo {
     min-width: 150px;
     width: 100%;
     height: 100%;
