--- a/public/frontend/assets_theme/corporate/css/style.css
+++ b/public/frontend/assets_theme/corporate/css/style.css
@@ -4,7 +4,7 @@ Template Name: Metronic - Responsive Website Template build with Twitter Bootstr
 
 /* General body settings */
 body {
-    color: #3e4d5c;
+    color: #000;
     direction: ltr;
     font: 400 13px "Open Sans", Arial, sans-serif;
     background: #fff;
@@ -343,7 +343,7 @@ Pre-Header and pre-header elements
     background: #fff;
 }
 .pre-header a {
-    color: #616b76;
+    color: #000;
 }
 .pre-header a:hover {
     color: #e02222;
@@ -783,7 +783,7 @@ body.page-header-fixed {
 }
 @media (min-width: 1025px) {
     .reduce-header .header-navigation > ul > li > a {
-        padding: 16px 12px 17px;
+        padding: 29px 12px 30px;
     }
     .ecommerce .reduce-header .header-navigation > ul > li > a {
         padding: 23px 12px 20px;
