--- a/public/frontend/css/camera.css
+++ b/public/frontend/css/camera.css
@@ -22,7 +22,7 @@ div.row > div#pre_Multiple {
     flex-wrap: wrap;
 }
 .tbl-fixed {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 .table {
     text-align: center;
