--- a/public/frontend/assets_theme/pages/css/style-shop.css
+++ b/public/frontend/assets_theme/pages/css/style-shop.css
@@ -195,6 +195,7 @@ Header and header elements
 
 .top-cart-content-wrapper {
     position: absolute;
+    width: max-content;
     right: -2px;
     top: 100%;
     z-index: 99999;
@@ -215,8 +216,8 @@ Header and header elements
 }
 .top-cart-content:after {
     top: -8px;
-    width: 0;
-    height: 0;
+    width: auto;
+    height: auto;
     right: 8px;
     z-index: 2;
     content: " ";
@@ -235,10 +236,11 @@ Header and header elements
 .top-cart-content ul {
     margin: 0;
     padding: 0 8px;
-}
-.top-cart-content .scroller {
     overflow: hidden;
+    width: auto !important;
+    height: auto !important;
 }
+
 .top-cart-content li {
     list-style: none;
     margin: 0;
@@ -269,17 +271,18 @@ Header and header elements
     padding-top: 10px;
 }
 .top-cart-content span {
-    width: 26px;
+    width: max-content;
 }
 .top-cart-content strong {
-    width: 165px;
+    width: 120px;
+    word-break: normal;
     font-weight: normal;
 }
 .top-cart-content strong a {
     color: #717880;
 }
 .top-cart-content em {
-    width: 55px;
+    width: 100px;
     font-style: normal;
     text-align: right;
 }
