--- a/public/frontend/assets_theme/corporate/css/custom.css
+++ b/public/frontend/assets_theme/corporate/css/custom.css
@@ -52,3 +52,38 @@
     right: 0;
     left: auto;
 }
+.giamgia {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 36px;
+    text-align: center;
+    background-color: rgba(255, 216, 64, 0.94);
+}
+.giamgia::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    border-width: 0 20px 5px;
+    border-style: solid;
+    color: rgba(255, 216, 64, 0.94);
+    border-color: transparent currentColor transparent currentColor;
+}
+.giamgia > .chu {
+    color: #ee4d2d;
+    font-weight: bold;
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+    position: relative;
+    top: 4px;
+}
+.giamgia > .phantram {
+    color: #ee4d2d;
+    font-weight: bold;
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+    position: relative;
+    top: 0;
+}
