--- a/public/frontend/css/dangnhap.css
+++ b/public/frontend/css/dangnhap.css
@@ -498,20 +498,44 @@ iframe {
 }
 
 /* user  */
-.social {
-    margin: 5px;
-    text-align: center;
-}
 
-.social a {
-    display: inline-block;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 4px;
+.google-btn {
+    width: 200px;
+    height: 42px;
+    background-color: #4285f4;
+    border-radius: 2px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    margin: auto;
 }
-.social a img {
-    border-radius: 5px;
+.google-btn a .google-icon-wrapper {
+    position: absolute;
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+.google-btn a .google-icon {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 11px;
+    width: 18px;
+    height: 18px;
+}
+.google-btn a .btn-text {
+    float: right;
+    margin: 11px 11px 0 0;
+    color: #fff;
+    font-size: 14px;
+    letter-spacing: 0.2px;
+    font-family: "Roboto";
+}
+.google-btn a:hover {
+    box-shadow: 0 0 6px #4285f4;
+}
+.google-btn a:active {
+    background: #1669f2;
 }
 
 .login_message > p > a:hover#dangky {
